--- a/src/index.css
+++ b/src/index.css
@@ -36,9 +36,9 @@ body {
   max-height: 300px;
   background-color: #FFF;
   overflow: hidden;
-  box-shadow: 0px 2px 64px rgba(0,0,0,0.2);
+  box-shadow: 0px 2px 64px rgba(0,0,0,0.2), 0px 4px 64px rgba(0,0,0,0.2);
   border-radius: 16px;
-  border: 0.1px solid white
+  border: 0.1px solid white;
 }
 
 .display {
